# 2024-P1-Naman-Agarwal1608

./: README.md  endpoints.http  pyproject.toml
todo/views/: routes.py
